tests/operator/not_str.rz
!"5" // error: unary operator '!' can only be used on 'bool' type